# vector-db

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
classes/: init_api.py  init_classes.py  services.py
docker/: Dockerfile
scripts/: create_demo_data.py
src/vector_db/api/: dependencies.py  main.py  schemas.py
src/vector_db/api/routers/: chunks.py  documents.py  libraries.py  vector_db.py
src/vector_db/application/: document_indexing_service.py  index_service.py  services.py  vector_db_service.py
src/vector_db/domain/: exceptions.py  interfaces.py  models.py
src/vector_db/infrastructure/: cohere_client.py  cohere_embedding_service.py  embedding_service.py  index_factory.py  logging.py  repositories.py  repository.py  search_index.py
src/vector_db/infrastructure/indexes/: README.md  __init__.py  base.py  lsh.py  naive.py  vptree.py
tests/: README.md  __init__.py  conftest.py  utils.py
tests/integration/: README_semantic_quality.md  test_api_endpoints.py  test_complete_workflow.py  test_main.py  test_semantic_search_quality.py  test_vector_db_service_integration.py
tests/semantic/: test_semantic_search_quality.py
tests/unit/: test_api_functions.py  test_chunk_service.py  test_document_service.py  test_domain_models.py  test_index_base.py  test_index_factory.py  test_index_lsh.py  test_index_vptree.py  test_library_service.py  test_lsh_index.py  test_naive.py  test_repositories.py  test_search_service.py  test_search_service_integration.py  test_services.py  test_vector_db_service.py  test_vector_db_service_basic.py  test_vector_db_service_document.py  test_vector_db_service_integration.py  test_vector_db_service_library.py  test_vector_db_service_search.py  test_vptree_index.py
‎scripts/data_scrape/: pyproject.toml
