[tool.poetry]
name = "vector-db"
version = "0.1.0"
description = "Vector Database FastAPI Backend"
authors = ["mbenavente"]
readme = "README.md"
packages = [{include = "vector_db", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
numpy = "^1.26.0"
structlog = "^23.2.0"
cohere = "^5.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.25.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.7.0"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"